<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_service_description">Auto TTS requires access permission to work with TalkBack.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Auto TTS</string>
    <string name="auto_mode">Modes</string>
    <string name="auto_mode_auto">Auto language detect</string>
    <string name="auto_mode_description">"Whole-sentence language recognition. Reads text by most appropriated language. If language can't be detected, reads by user-preferred language. This mode is designed for single-script texts from any language."</string>
    <string name="auto_mode_dual">Dual languages</string>
    <string name="auto_mode_google">Google TTS</string>
    <string name="auto_mode_header">Mode Settings</string>
    <string name="auto_mode_language">Select preferred language:</string>
    <string name="auto_mode_none">None</string>
    <string name="auto_mode_options">Other options</string>
    <string name="autotts_current_engine">Current engine</string>
    <string name="autotts_decrease">-</string>
    <string name="autotts_engine_failed">Auto TTS: init new engine failed.</string>
    <string name="autotts_engine_ready">Auto TTS: new engine is ready.</string>
    <string name="autotts_increase">+</string>
    <string name="autotts_init_engine">Auto TTS is initializing new engine.</string>
    <string name="autotts_language">Language</string>
    <string name="autotts_license">" &lt;p>&lt;b>Copyright &amp;#169; 2026 DIGIXMAS, Vietnam&lt;/b>&lt;/p> &lt;p>Auto TTS uses open source Android Open Source Project (AOSP) and Compact Language Detector 2 (CLD2). Both are licensed under the Apache License, Version 2.0.&lt;/p> &lt;ul> &lt;li> &lt;p>&lt;b>&lt;i>Android Open Source Project (AOSP)&lt;/i>&lt;/b>&lt;/p> &lt;p>Copyright &amp;#169; 2011 The Android Open Source Project&lt;/p> &lt;p>Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0&lt;/p> &lt;p>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.&lt;/p> &lt;p>&lt;a href=http://www.apache.org/licenses/LICENSE-2.0>APACHE LICENSE, VERSION 2.0&lt;/a>&lt;/p> &lt;/li> &lt;li> &lt;p>&lt;b>&lt;i>Compact Language Detector 2 (CLD2)&lt;/i>&lt;/b>&lt;/p> &lt;p>Copyright 2013 Google Inc. All Rights Reserved.&lt;/p> &lt;p>Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0&lt;/p> &lt;p>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.&lt;/p> &lt;p>&lt;a href=http://www.apache.org/licenses/LICENSE-2.0>APACHE LICENSE, VERSION 2.0&lt;/a>&lt;/p> &lt;/li> &lt;/ul> "</string>
    <string name="autotts_pitch">Pitch</string>
    <string name="autotts_pitch_decrease">Decrease pitch</string>
    <string name="autotts_pitch_increase">Increase pitch</string>
    <string name="autotts_progress">Please wait while Auto TTS scans for all available languages and voices …</string>
    <string name="autotts_reset">Default</string>
    <string name="autotts_scan">Scanning</string>
    <string name="autotts_scan_engines">Scan for tts engines…</string>
    <string name="autotts_select_language">Select language</string>
    <string name="autotts_select_languages">Languages</string>
    <string name="autotts_select_languages_descr">"Select languages you want to work with.
Note: This list only includes languages supported by TTS engines on your device. If your language is missing, please install a third-party TTS engine that supports it."</string>
    <string name="autotts_select_languages_not_available">Language selection is not available for \"None\" and \"Dual languages\" modes.</string>
    <string name="autotts_select_voice">Choose a voice for language</string>
    <string name="autotts_select_voice_header">"Choose an installed voice for each language.
Tip: To avoid switching delays, we recommend assigning only one engine per language."</string>
    <string name="autotts_select_voice_variant">Choose a variant for voice</string>
    <string name="autotts_speed">Speed</string>
    <string name="autotts_speed_decrease">Decrease speed</string>
    <string name="autotts_speed_increase">Increase speed</string>
    <string name="autotts_stop">Stop</string>
    <string name="autotts_stop_progress">If scanning takes too long, click Stop button!</string>
    <string name="autotts_voice_settings_not_available">"Voices settings aren't available for \"None\" mode."</string>
    <string name="autotts_volume">Volume</string>
    <string name="autotts_volume_decrease">Decrease volume</string>
    <string name="autotts_volume_increase">Increase volume</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cd_tab_title_param">%1$s, tab %2$d of %3$d</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_all">"Clear
all"</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="dedicated_engines">Dedicated engines</string>
    <string name="dedicated_engines_description">Only use this option if you have a dedicated TTS engine for each voice, and ensure no other apps are using them.</string>
    <string name="disable_advanced_language_delection">Disable advanced language detection</string>
    <string name="disable_advanced_language_delection_description">Turn off advanced language detection for better performance.</string>
    <string name="disable_battery_optimization">Disable battery optimization</string>
    <string name="disable_battery_optimization_description">Request battery optimization exemptions for both Auto TTS and all associated third-party TTS engines to ensure uninterrupted performance.</string>
    <string name="dual_mode_description">Character-by-character language recognition. Reads Latin words by English, others by user-specified language. This mode is designed for mixed-script texts combining English with a non-Latin language (e.g., English with Hindi)</string>
    <string name="dual_mode_header">Mode Settings</string>
    <string name="dual_mode_language">Select secondary language:</string>
    <string name="emoji_mode_auto_language">Auto language</string>
    <string name="emoji_mode_language">Select language for reading emojis:</string>
    <string name="emoji_mode_primary_language">Primary language</string>
    <string name="emoji_mode_secondary_language">Secondary language</string>
    <string name="emoji_mode_specific_language">Specific language</string>
    <string name="emoji_specific_language">Specific language for reading emojis</string>
    <string name="error_icon_content_description">Error</string>
    <string name="experimental">Experimental</string>
    <string name="export_settings">Export</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="force_accessibility_stream">Force to use audio accessibility stream</string>
    <string name="force_accessibility_stream_description">Route TTS audio output through the accessibility audio stream.</string>
    <string name="go_to_mode_settings">Go to Mode Settings</string>
    <string name="go_to_voice_settings">Go to Voice Settings</string>
    <string name="google_mode_description">Same as auto mode, but only Google TTS is used.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="import_export">Import/Export Configuration</string>
    <string name="import_settings">Import</string>
    <string name="import_settings_description">When importing settings, Auto TTS only checks if required third-party TTS engines are available. You must manually ensure that specific voices used in your configuration are installed and ready to use.</string>
    <string name="voice_settings_header">Voices</string>
    <string name="voice_test">Test</string>
</resources>